--- a/HTML/sigortam-net.html
+++ b/HTML/sigortam-net.html
@@ -778,7 +778,7 @@
                     <h4>Bizi Takip Edin</h4>
                     <div class="social-icons">
                         <a href="https://facebook.com/sigortamnet"><i class="fa-brands fa-facebook-f"></i></a>
-                        <a href="https://twitter.com/sigortamnet"><i class="fa-brands fa-square-twitter"></i></a>
+                        <a href="https://twitter.com/sigortamnet"><i class="fa-brands fa-twitter"></i></a>
                         <a href="https://instagram.com/sigortamnet"><i class="fa-brands fa-instagram"></i></i></a>
                         <a href="https://www.linkedin.com/company/sigortam-net"><i class="fab fa-linkedin"></i></a>
                         <a href="https://www.youtube.com/c/sigortamnet"><i class="fa-brands fa-youtube"></i></a>
